Use flex spacing instead of fixed margins

--- a/data/css/ui.css
+++ b/data/css/ui.css
@@ -12,10 +12,11 @@ MainMenu {
 
     border-left: 2 solid rgba(0.5, 0.5, 0.5, 1.0);
     border-right: 2 solid rgba(0.5, 0.5, 0.5, 1.0);
-    padding-left: 16;
-    padding-right: 16;
+    padding-left: 32;
+    padding-right: 32;
+    padding-bottom: 16;
 
-    box-spacing-y: 32;
+    background: rgba(0, 0, 0, 0.7);
 }
 
 MainMenu label.title {
@@ -26,8 +27,6 @@ MainMenu label.title {
 MainMenu label.subtitle {
     font-size: 16;
     height: 20;
-    margin-top: -24;
-    margin-bottom: 6;
 }
 
 MainMenu button {
@@ -39,9 +38,18 @@ MainMenu button {
     font-size: 20;
     vertical-align: middle;
     color: rgba(1.0, 1.0, 1.0, 0.8);
+    flex: 2;
+}
+
+MainMenu button:focused {
+    background: rgba(0.0, 0.5, 0.8, 0.2);
 }
 
 MainMenu button:hover {
     background: rgba(0.0, 0.5, 0.8, 0.3);
     color: inherit;
+}
+
+MainMenu space {
+    flex: 1;
 }
